sumo/tests/duarouter/routes/style1_input/errors/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departLane' in definition of vehicle '0' is empty.
Error: Invalid departLane definition for vehicle '0';
 must be one of ("random", "free", "allowed", "best", or an int>=0)
Quitting (on error).
